# goat

./: .README.md.swp  .bash_profile  .bashrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  aliases  bulk.sh  goat_command_tree.json  load_prompt.sh  prep_env.sh  test.py
adhoc/: README.md  pyproject.toml  tests.py
adhoc/adhoc/: adhoc.py
adhoc/adhoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
awstools/: README.md  pyproject.toml
awstools/awstools/: awscli_wrapper.py  awstools.py  awstools_show.py  ec2.py  ec2client.py  get_accounts.py  iam.py  iam_nongc.py  rds.py  s3.py  s3client.py
awstools/awstools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configstore/: README.md  pyproject.toml
configstore/configstore/: configstore.py  configstore_ctrl.py
configstore/configstore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contools/: pyproject.toml
contools/contools/: auth.py  tools.py
contools/contools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
csptools/: README.md  pyproject.toml  tests.py
csptools/csptools/: csp_auth.py  csp_idp.py  csp_org.py  csp_show.py  csp_upgrade.py  csp_user.py  cspclient.py  csptools.py  idpclient.py
csptools/csptools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
flytools/: pyproject.toml
flytools/flytools/: auth.py  client.py
flytools/flytools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gitools/: pyproject.toml
gitools/gitools/: tools.py
gitools/gitools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goaat/: README.md  pyproject.toml
goaat/goaat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goaat/goat/: README.md  goat.py
goat/: install.sh  pyproject.toml
goat-shell/: README.md  pyproject.toml  setup.cfg  setup.py
goat-shell/goatshell/: README.md  completer.py  confirm.py  customKeys.py  custom_keys.py  dynamic_prompt.py  fetch_goat.py  goat_command_tree.json  goatshell.py  logger.py  main.py  misc.py  parser.py  style.py  switch_azure_subscription.py  switch_profile.py  ui.py
goat-shell/goatshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goat/goat/: cmd_preset.py  goat.py
goat/goat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
goatawstools/: pyproject.toml
goatawstools/awstools/: accounts.py  awscli_wrapper.py  awstools_show.py  ec2.py  ec2client.py  extract.py  extract_commands.py  iam_nongc.py  rds.py  rdsclient.py  s3client.py
goatawstools/awstools.egg-info/: SOURCES.txt  requires.txt  top_level.txt
goatawstools/goatawstools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
goatazdevops/: install.sh  pyproject.toml
goatazdevops/azdevops/: auth.py  azdev.py  azdev_show.py  azdevclient.py  boards.py  issue.py  misc.py  pipelines.py  project.py  search.py  sendgrid.py  sprints.py
goatazdevops/goatazdevops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goataztools/: pyproject.toml
goataztools/aztools/: extract.py
goataztools/goataztools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
goatconfigstore/: pyproject.toml
goatconfigstore/configstore/: configstore.py
goatconfigstore/configstore.egg-info/: requires.txt
goatconfigstore/goatconfigstore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
goatibmcloudtools/: pyproject.toml
goatibmcloudtools/goatibmcloudtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
goatibmcloudtools/ibmcloudtools/: extract.py  ibmcloudtools.py
goatjenkinstools/: pyproject.toml
goatjenkinstools/goatjenkinstools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
goatjenkinstools/jenkinstools/: jenkins_show.py  jenkinstools.py
goatjenkinstools/jenkinstools.egg-info/: PKG-INFO  requires.txt
goatjiratools/: pyproject.toml
goatjiratools/goatjiratools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
goatjiratools/jiratools/: auth.py  issue.py
goatjiratools/jiratools.egg-info/: entry_points.txt
goatocitools/: pyproject.toml
goatocitools/goatocitools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
goatocitools/ocitools/: .regionsclient.py.swp  compute.py  computeclient.py  dbsclient.py  extract.py  extract.py.bak  get_oci_commands.py.bak  iam.py  iamclient.py  keysclient.py  oci_commands.txt  oci_config.py  ocicli_wrapper.py  ocitools.py  ossclient.py  regionsclient.py  secrets.py  secretsclient.py  vaultclient.py
goatocitools/ocitools.egg-info/: PKG-INFO  top_level.txt
goatovhaitools/: pyproject.toml
goatovhaitools/goatovhaitools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goatovhaitools/ovhaitools/: extract.py  ovhaitools.py
goatslacktools/: install.sh  pyproject.toml
goatslacktools/goatslacktools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
goatslacktools/slacktools/: channel.py  react.py  slack_converter.py
goattoolbox/: install.sh  pyproject.toml
goattoolbox/goattoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
goattoolbox/toolbox/: click_complete.py  fernet.py  getpass.py  menuboard.py  menumaker.py  misc.py  stage_accounts.lst  utils.py
goattoolbox/toolbox.egg-info/: PKG-INFO  requires.txt  top_level.txt
idptools/: pyproject.toml
idptools/idptools/: idp_auth.py  idp_tenant.py  idp_users.py  idpclient.py  idptools.py
idptools/idptools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jctools/: pyproject.toml
jctools/jctools/: show.py
jctools/jctools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
jenkinstools/: pyproject.toml
jenkinstools/jenkinstools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
jfrogtools/: pyproject.toml
jiratools/: README.md  pyproject.toml
kubetools/: pyproject.toml
nexustools/: pyproject.toml
ocitools/: pyproject.toml
pyps/: README.md  pyproject.toml
(+881 files in other folders)
