[project]
name = "adhoc"
version = "0.0.1"
authors = [
  { name="Paul Wilk", email="wilkp@vmware.com" },
  { name="Chris Stacks", email="stacksc@vmware.com" }
]
description = "adhoc - a CLI for VMware Favorite Workflows"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "argparse",
  "argcomplete"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "toolbox"
]

[project.scripts]
adhoc = "adhoc.adhoc:cli"

[tool.setuptools.packages]
find = {}
