[project]
name = "awstools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "AWStools - CLI client for AWS GovCloud"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "boto3",
  "botocore >= 1.31.00",
  "click >= 8.1",
  "toolbox",
  "configstore",
  "requests_ntlm"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "toolbox",
  "configstore"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "awstools.__version__"}

[project.scripts]
awstools = "awstools.awstools:CLI"

[tool.setuptools.packages]
find = {}
