[project]
name = "configstore"
version = "1.0.0" # major.update.reviewed
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "configtools - manage settings for your Python application with encrypted json files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "click",
  "toolbox"
]

[build-system]
requires = [
  "setuptools >= 40.9.0"
]

[project.scripts]
configstore = "configstore.configstore_ctrl:cli"

[tool.setuptools.packages]
find = {}
