[project]
name = "contools"
version = "0.0.2"
authors = [
  { name="Chris Stacks", email="stacksc@vmware.com" },
]
description = "contools - everything you need to interact with VMware Confluence"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "toolbox",
  "configstore",
  "click"
]

[build-system]
requires = [
  "setuptools >= 40.9.0"
]

[project.scripts]
contools = "contools.tools:cli"

[tool.setuptools.packages]
find = {}
