[project]
name = "flytools"
version = "0.0.2"
authors = [
  { name="Chris Stacks", email="stacksc@vmware.com" },
]
description = "JFROGTools - CLI client for JFROG artifactory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "PyYAML"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "toolbox",
  "configstore"
]

[project.scripts]
flytools = "flytools.tools:cli"

[tool.setuptools.packages]
find = {}

