[project]
name = "goatshell"
authors = [
  { name="Christopher Stacks", email="centerupt@gmail.com" }
]
description = "goatshell - goat shell interface to common cloud providers."
requires-python = ">=3.7"
dynamic = ["version"]
readme = "README.md"

dependencies = [
    'prompt-toolkit >= 3.0.0',
    'Pygments >= 2.1.3, < 3.0.0',
    'fuzzyfinder >= 1.0.0',
    'click >= 8.0.4',
    "goatconfigstore",
    "gnureadline",
    "goatocitools",
    "goatawstools",
    "goatjiratools",
    "goatslacktools",
    "goatjenkinstools",
    "goattoolbox",
    "goatconfigstore",
    "goaat",
    "azure-cli",
    "oci-cli",
    "oci",
    "aws2",
    "gcloud"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "goattoolbox",
  "goatconfigstore"
]

[tool.setuptools.dynamic]
version = {attr = "goatshell.__version__"}

[project.scripts]
goatshell = "goatshell.main:cli"

[tool.setuptools.packages]
find = {}
