[project]
name = "goatawstools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "AWStools - CLI client for AWS GovCloud"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "boto3",
  "botocore >= 1.31.00",
  "click >= 8.0.4",
  "requests_ntlm",
  "aws2"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "awstools.__version__"}

[project.scripts]
awstools = "awstools.awstools:CLI"

[tool.setuptools.packages]
find = {}
