[project]
name = "goatazdevops"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "azdevops - a CLI client for Azure DevOps included by default"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "click >= 8.0.4",
  "azure-devops",
  "tabulate",
  "prompt_toolkit"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "azdevops.__version__"}

[project.scripts]
jiratools = "azdevops.azdev:cli"

[tool.setuptools.packages]
find = {}
