[project]
name = "goatconfigstore"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "configtools - manage settings for your Python application with encrypted json files"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "click >= 8.0.4",
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "configstore.__version__"}

[project.scripts]
configstore = "configstore.configstore_ctrl:cli"

[tool.setuptools.packages]
find = {}
