[project]
name = "goatocitools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "OCItools - CLI client for OCI"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "oci",
  "oci-cli",
  "click >= 8.0.4",
  "tqdm",
  "requests_ntlm"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "goattoolbox",
  "goatconfigstore"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "ocitools.__version__"}

[project.scripts]
ocitools = "ocitools.ocitools:CLI"

[tool.setuptools.packages]
find = {}
