[project]
name = "goatslacktools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "slackclient - a CLI client for GOAAT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "slack_sdk",
  "argparse",
  "argcomplete"
]

dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "slacktools.__version__"}

[project.scripts]
slacktools = "slacktools.slackclient:cli"

[tool.setuptools.packages]
find = {}

# include our slack_channels.lst
[tool.setuptools.package-data]
"*" = ["*.lst"]

