[project]
name = "goattoolbox"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "toolbox - a library of standalone python modules ready for use"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "argparse",
  "pync",
  "gnupg",
  "cryptography"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0"
]

build-backend = 'setuptools.build_meta'

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "toolbox.__version__"}

[tool.setuptools.packages]
find = {}

# include our emoji.lst and other data
[tool.setuptools.package-data]
"*" = ["*.lst"]
