[project]
name = "jctools"
version = "0.0.3"
authors = [
  { name="Chris Stacks", email="stacksc@vmware.com" },
]
description = "Job Control Tools - submit CSCM tickets through common pipeline tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "click"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "toolbox",
  "configstore"
]

[project.scripts]
jctools = "jctools.tools:cli"

[tool.setuptools.packages]
find = {}

