[project]
name = "jenkinstools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" },
]
description = "jenkinstools - everything you need to interact with Jenkins"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "toolbox",
  "configstore",
  "python-jenkins",
  "click"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "toolbox",
  "configstore"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "jenkinstools.__version__"}

[project.scripts]
jenkinstools = "jenkinstools.jenkinstools:cli"

[tool.setuptools.packages]
find = {}
