[project]
name = "jiratools"
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "jiratools - a CLI client for Jira included by default"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "toolbox",
  "configstore",
  "click >= 7",
  "jira",
  "tabulate",
  "prompt_toolkit"
]
dynamic = ["version", "readme"]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "toolbox",
  "configstore"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "jiratools.__version__"}

[project.scripts]
jiratools = "jiratools.jiraclient:cli"

[tool.setuptools.packages]
find = {}
