[project]
name = "kubetools"
version = "0.0.2"
authors = [
  { name="Paul Wilk", email="wilkp@vmware.com" },
]
description = "kubetools - python wrappers for kubectl and vdp"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "toolbox",
  "configstore",
  "click"
]

[build-system]
requires = [
  "setuptools >= 40.9.0"
]

[project.scripts]
kubetools = "kubetools.kubetools:cli"

[tool.setuptools.packages]
find = {}