[project]
name = "nexustools"
version = "0.0.2"
authors = [
  { name="Chris Stacks", email="stacksc@vmware.com" },
]
description = "nexustools - everything you need to interact with VMware Nexus"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "toolbox",
  "configstore",
  "click"
]

[build-system]
requires = [
  "setuptools >= 40.9.0"
]
build-backend = 'setuptools.build_meta'

[project.scripts]
nexustools = "nexustools.nexustools:cli"
nexus_auth = "nexustools.nexus_auth:auth"

[tool.setuptools.packages]
find = {}
