[project]
name = "ocitools"
version = "0.0.3" # minor.update.prod-preview
authors = [
  { name="Chris Stacks", email="centerupt@gmail.com" }
]
description = "OCItools - CLI client for OCI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "oci",
  "click",
  "toolbox",
  "configstore",
  "tqdm",
  "requests_ntlm"
]


[build-system]
requires = [
  "setuptools >= 40.9.0"
]

[project.scripts]
ocitools = "ocitools.ocitools:CLI"

[tool.setuptools.packages]
find = {}
