[project]
name = "pyps"
version = "1.0.0" # reviewed
authors = [
  { name="Paul Wilk", email="wilkp@vmware.com" },
  { name="Christopher Stacks", email="stacksc@vmware.com" }
]
description = "pyps - PYthon tools by PSsre team - pronounced as 'pipes'"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "importlib_metadata",
  "click-man"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "toolbox",
  "configstore"
]

[project.scripts]
pyps = "pyps.pyps:cli"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.1"]
